--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/XadillaX/day-from-1970",
   "devDependencies": {
+    "mocha": "^2.4.5",
+    "moment": "^2.11.2",
+    "should": "^8.2.2",
     "uglify-js": "^2.4.16"
   }
 }
-
