change license to MIT

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "year"
   ],
   "author": "XadillaX",
-  "license": "GPLv2",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/XadillaX/day-from-1970/issues"
   },
